Styles.css attempt at fixing the left alignment animation

--- a/static/styles.css
+++ b/static/styles.css
@@ -191,8 +191,9 @@ input[type="radio"] {
         transform 0.3s ease;
     opacity: 0.9;
 }
-.floating-label input:focus + label,
-.floating-label input:not(:placeholder-shown) + label {
+
+.floating-label input:focus + .slide label,
+.floating-label input:not(:placeholder-shown) + .slide label {
     top: 16px;
     left: -50px;
     font-size: 16px;
@@ -202,7 +203,7 @@ input[type="radio"] {
     transform: translateX(0);
 }
 
-.floating-label input:focus + label::after,
+.floating-label input:focus + .slide label::after,
 .floating-label input:not(:placeholder-shown) + label::after {
     content: ":";
 }
@@ -212,6 +213,49 @@ input[type="radio"] {
     width: calc(100% - 40px);
     margin-left: 50px;
 }
+.floating-label.left{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    max-width: 300px;
+    position: relative;
+}
+
+.floating-label.left input{
+    margin-left: 50px;
+    width: calc(100% - 50px);
+}
+
+.floating-label.left .slide {
+    width: 100%;
+    position: relative;
+    transition: transform 0.3s ease;
+}
+.floating-label.left .slide input:focus ~ label, .floating-label.left .slide input:not(:placeholder-shown) ~ label {
+    top: 16px;
+    left: -50px;
+    font-size: 16px;
+    font-weight: 700;
+    color: #4b2e83;
+    opacity: 1;
+}
+.floating-label.left .slide input:focus + label::after, .floating-label.left .slide input:not(:placeholder-shown) + label::after {
+    content: ":";
+}
+/*animation*/
+.floating-label.left .slide input:focus ~ *, .floating-label.left .slide input:not(:placeholder-shown) ~ * {
+    transform: translateX(50px);
+}
+
+.floating-label.left .side-btn {
+    margin-left: 10px;
+    transition: transform 0.3s ease;
+}
+
+.floating-label.left .slide input:focus ~ .side-btn, .floating-label.left .slide input:not(:placeholder-shown) ~ .side-btn{
+    transform: translateX(50px);
+}
+
 .floating-select {
     appearance: none;
     width: 100%;
